# DialogueMaster

./: .gitignore  CMakeLists.txt  DialogueMaster.md  DialogueMaster.py  Modelfile  README.md  conanfile.txt
DialogueMaster/: CMakeLists.txt
DialogueMaster/include/: DialogueMaster.hpp
DialogueMaster/src/: DialogueMaster.cpp
src/: main.cpp
tests/: main.py  test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py  utils.py
